added additional database config, fixed min max length bugs at frontend, fixed some tests

--- a/angular-web-task/src/app/components/academics/department/department-create/department-create.component.html
+++ b/angular-web-task/src/app/components/academics/department/department-create/department-create.component.html
@@ -4,7 +4,7 @@
     <div class="form-group">
       <label for="name">Name</label>
       <input type="text" class="form-control" id="name" placeholder="Name"
-             [(ngModel)]="department.name" name="name" required minlength="5" #name="ngModel">
+             [(ngModel)]="department.name" name="name" required minlength="5" maxlength="30" #name="ngModel">
 
       <div *ngIf="name.invalid && (name.dirty || name.touched)"
             class="alert alert-danger">
