--- a/angular-web-task/src/app/components/academics/subject/subject-create/subject-create.component.html
+++ b/angular-web-task/src/app/components/academics/subject/subject-create/subject-create.component.html
@@ -4,7 +4,7 @@
     <div class="form-group">
       <label for="name">Name</label>
       <input type="text" class="form-control" id="name" placeholder="Name"
-             [(ngModel)]="subject.name" name="name" required minlength="5" #name="ngModel">
+             [(ngModel)]="subject.name" name="name" required minlength="5" maxlength="30" #name="ngModel">
 
       <div *ngIf="name.invalid && (name.dirty || name.touched)"
             class="alert alert-danger">
@@ -12,7 +12,7 @@
            Subject name is required.
         </div>
        <div *ngIf="name.errors.minlength">
-           Subject name must be at least 3 characters long.
+           Subject name must be at least 5 characters long.
        </div>
       </div>
     </div>
